# src/controllers/notification.controller.js
@@ -1,114 +1,0 @@
-"use strict";
-var __awaiter = (this && this.__awaiter) || function (thisArg, _arguments, P, generator) {
-    function adopt(value) { return value instanceof P ? value : new P(function (resolve) { resolve(value); }); }
-    return new (P || (P = Promise))(function (resolve, reject) {
-        function fulfilled(value) { try { step(generator.next(value)); } catch (e) { reject(e); } }
-        function rejected(value) { try { step(generator["throw"](value)); } catch (e) { reject(e); } }
-        function step(result) { result.done ? resolve(result.value) : adopt(result.value).then(fulfilled, rejected); }
-        step((generator = generator.apply(thisArg, _arguments || [])).next());
-    });
-};
-var __generator = (this && this.__generator) || function (thisArg, body) {
-    var _ = { label: 0, sent: function() { if (t[0] & 1) throw t[1]; return t[1]; }, trys: [], ops: [] }, f, y, t, g;
-    return g = { next: verb(0), "throw": verb(1), "return": verb(2) }, typeof Symbol === "function" && (g[Symbol.iterator] = function() { return this; }), g;
-    function verb(n) { return function (v) { return step([n, v]); }; }
-    function step(op) {
-        if (f) throw new TypeError("Generator is already executing.");
-        while (g && (g = 0, op[0] && (_ = 0)), _) try {
-            if (f = 1, y && (t = op[0] & 2 ? y["return"] : op[0] ? y["throw"] || ((t = y["return"]) && t.call(y), 0) : y.next) && !(t = t.call(y, op[1])).done) return t;
-            if (y = 0, t) op = [op[0] & 2, t.value];
-            switch (op[0]) {
-                case 0: case 1: t = op; break;
-                case 4: _.label++; return { value: op[1], done: false };
-                case 5: _.label++; y = op[1]; op = [0]; continue;
-                case 7: op = _.ops.pop(); _.trys.pop(); continue;
-                default:
-                    if (!(t = _.trys, t = t.length > 0 && t[t.length - 1]) && (op[0] === 6 || op[0] === 2)) { _ = 0; continue; }
-                    if (op[0] === 3 && (!t || (op[1] > t[0] && op[1] < t[3]))) { _.label = op[1]; break; }
-                    if (op[0] === 6 && _.label < t[1]) { _.label = t[1]; t = op; break; }
-                    if (t && _.label < t[2]) { _.label = t[2]; _.ops.push(op); break; }
-                    if (t[2]) _.ops.pop();
-                    _.trys.pop(); continue;
-            }
-            op = body.call(thisArg, _);
-        } catch (e) { op = [6, e]; y = 0; } finally { f = t = 0; }
-        if (op[0] & 5) throw op[1]; return { value: op[0] ? op[1] : void 0, done: true };
-    }
-};
-Object.defineProperty(exports, "__esModule", { value: true });
-exports.getNotification = exports.createNotification = void 0;
-var notification_model_1 = require("../models/notification.model");
-var createNotification = function (notificationData) { return __awaiter(void 0, void 0, void 0, function () {
-    var notification, error_1;
-    return __generator(this, function (_a) {
-        switch (_a.label) {
-            case 0:
-                _a.trys.push([0, 2, , 3]);
-                // Validate required fields
-                if (!notificationData.title ||
-                    !notificationData.type ||
-                    !notificationData.description ||
-                    !notificationData.user) {
-                    return [2 /*return*/];
-                }
-                return [4 /*yield*/, notification_model_1.default.create({
-                        title: notificationData.title,
-                        type: notificationData.type,
-                        description: notificationData.description,
-                        user: notificationData.user,
-                    })];
-            case 1:
-                notification = _a.sent();
-                return [2 /*return*/, notification];
-            case 2:
-                error_1 = _a.sent();
-                console.error("Error creating notification:", error_1);
-                throw error_1;
-            case 3: return [2 /*return*/];
-        }
-    });
-}); };
-exports.createNotification = createNotification;
-var getNotification = function (req, res) { return __awaiter(void 0, void 0, void 0, function () {
-    var userId, page, limit, skip, filter, _a, count, rows, error_2;
-    return __generator(this, function (_b) {
-        switch (_b.label) {
-            case 0:
-                _b.trys.push([0, 2, , 3]);
-                userId = req.user.id;
-                page = parseInt(req.query.page) || 1;
-                limit = parseInt(req.query.limit) || 10;
-                skip = (page - 1) * limit;
-                filter = { user: userId };
-                // Add optional type filter if provided in query
-                if (req.query.type) {
-                    filter.type = req.query.type;
-                }
-                return [4 /*yield*/, notification_model_1.default.findAndCountAll({
-                        where: filter,
-                        order: [["createdAt", "DESC"]],
-                        offset: skip,
-                        limit: limit,
-                    })];
-            case 1:
-                _a = _b.sent(), count = _a.count, rows = _a.rows;
-                res.json({
-                    success: true,
-                    count: rows.length,
-                    total: count,
-                    page: page,
-                    pages: Math.ceil(count / limit),
-                    data: rows,
-                });
-                return [3 /*break*/, 3];
-            case 2:
-                error_2 = _b.sent();
-                res.status(500).json({
-                    error: "some error accured while fetching notifcations",
-                });
-                return [3 /*break*/, 3];
-            case 3: return [2 /*return*/];
-        }
-    });
-}); };
-exports.getNotification = getNotification;
